# EPenguin

./: .gitignore  api-auth.md  api.md  google_client_secrets.json  main.py  pyproject.toml  test.py
bot/: codeforcdes.py  config.json  luyencode.json  luyencode.py  main.py  marisa_easy.py  utils.py
bot/luyencode/: __init__.py  luyencode.py
docs/: API.md
website/: __init__.py  models.py
website/routes/: api.py  auth.py  updater.py
