[project]
name = "epenguin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "firebase-admin>=7.1.0",
    "flask-apscheduler>=1.13.1",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "google-auth-oauthlib>=1.2.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
